Устранил ряд ошибок, скорректировал Readme.md
