# app_server/internal/models/errors.go
@@ -12,7 +12,9 @@ var (
 	ErrInternal = errors.New("internal server error")
 	ErrDBQuery  = errors.New("database query error")
 
-	ErrCategoriesNotFound     = errors.New("categories not found")
-	ErrAdvertisementsNotFound = errors.New("advertisements not found")
-	ErrAdvertisementNotFound  = errors.New("advertisement not found")
+	ErrCategoriesNotFound          = errors.New("categories not found")
+	ErrAdvertisementsNotFound      = errors.New("advertisements not found")
+	ErrAdvertisementNotFound       = errors.New("advertisement not found")
+	ErrAdvertisementNotPublishable = errors.New("advertisement cannot be published because of its current status")
+	ErrAdvertisementAlreadyDraft   = errors.New("advertisement is already in draft status")
 )
